tests/algorithms/x/Erlang/maths/primelib.error
run: exit status 127
true
[2 3 5 7 11 13 17 19]
[2 3 5 7 11 13 17 19]
[7 41]
41
7
40
[5 23]
23
escript: exception error: "arguments must be prime and p1 < p2"
  in function  main:get_primes_between/2 (/workspace/mochi/tests/algorithms/x/Erlang/maths/primelib.erl, line 382)
  in call from main:main/1 (/workspace/mochi/tests/algorithms/x/Erlang/maths/primelib.erl, line 560)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3